# ros2-socketcomm

./: README.md  build.sh  launch.sh
src/collatz_core/: CMakeLists.txt  package.xml
src/collatz_core/launch/: cpp_and_vis_launch.py
src/collatz_core/scripts/: visualizer.py
src/collatz_cpp_server/: CMakeLists.txt  package.xml
src/collatz_cpp_server/src/: cpp_server.cpp
src/collatz_python_server/: package.xml  setup.cfg  setup.py
src/collatz_python_server/collatz_python_server/: python_server.py
