<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>collatz_python_server</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rameshamirreza3@gmail.com">amir</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>collatz_core</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
